--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </ul>
       </div>
       <!-- signup section -->
-      <div class="flex flex-col items-center justify-center gap-5 mt-10">
+      <div class="hidden flex flex-col items-center justify-center gap-5 mt-10">
         <h2 class="text-3xl text-gray-800 font-bold">Sign Up</h2>
         <form
           action=""
