--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h2 class="text-3xl text-gray-800 font-bold">Your Plane for today?</h2>
         <form id="todo-form" action="" class="">
           <input
-            class="text-xl text-gray-800 font-semibold border-2 focus:border-0 focus:outline-none focus:ring-2 focus:ring-yellow-800 outline-0 rounded px-5 py-1 w-[280px] border-gray-700"
+            class="text-xl text-gray-800 font-semibold border-2 focus:border-0 focus:outline-none focus:ring-2 focus:ring-yellow-800 outline-0 rounded px-5 py-1 w-[250px]  sm:w-[280px] md:w-[280px] lg:w-[280px] xl:w-[280px] 2xlw-[280px] border-gray-700"
             type="text"
             placeholder="Add Todo"
           />
@@ -69,7 +69,7 @@
           </button>
         </form>
         <ul id="todoList">
-          <li>
+          <!-- <li>
             <span id="text" class="pl-5">Item 1</span>
             <div class="pr-2">
               <button
@@ -83,11 +83,11 @@
                 Delete
               </button>
             </div>
-          </li>
+          </li> -->
         </ul>
       </div>
       <!-- signup section -->
-      <div class="hidden flex flex-col items-center justify-center gap-5 mt-10">
+      <!-- <div class=" flex flex-col items-center justify-center gap-5 mt-10">
         <h2 class="text-3xl text-gray-800 font-bold">Sign Up</h2>
         <form
           action=""
@@ -174,7 +174,7 @@
             Submit
           </button>
         </form>
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
