--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     >
       <!-- navbar section  -->
       <nav class="flex items-center justify-between px-5 py-2 text-gray-800">
-        <h1 class="text-3xl font-semibold">Website</h1>
+        <h1 class="text-3xl font-semibold">Todo App</h1>
         <ul class="flex items-center justify-center gap-10">
           <li
             class="text-2xl font-semibold cursor-pointer hover:text-yellow-500"
@@ -55,14 +55,14 @@
         class="flex flex-col items-center justify-center gap-3 mt-10"
       >
         <h2 class="text-3xl text-gray-800 font-bold">Your Plane for today?</h2>
-        <form id="todo-form" action="" class="">
+        <form id="todo-form" action="" class="px-5">
           <input
-            class="text-xl text-gray-800 font-semibold border-2 focus:border-0 focus:outline-none focus:ring-2 focus:ring-yellow-800 outline-0 rounded px-5 py-1 w-[250px]  sm:w-[280px] md:w-[280px] lg:w-[280px] xl:w-[280px] 2xlw-[280px] border-gray-700"
+            class="text-xl text-gray-800 font-semibold border-2 focus:border-0 focus:outline-none focus:ring-2 focus:ring-yellow-800 outline-0 rounded px-5 py-1 w-[250px]  sm:w-[280px] w-[250px] sm:w-[280px] md:w-[280px] lg:w-[280px] xl:w-[280px] 2xl:w-[280px] border-gray-700"
             type="text"
             placeholder="Add Todo"
           />
           <button
-            class="ml-5 px-3 py-1.5 bg-gray-500 hover:text-gray-500 text-yellow-500 text-xl font-semibold hover:bg-yellow-500 rounded transition-all ease duration-300"
+            class="ml-3 px-3 py-1.5 bg-gray-500 hover:text-gray-500 text-yellow-500 text-xl font-semibold hover:bg-yellow-500 rounded transition-all ease duration-300"
             type="submit"
           >
             Add Todo
