--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h2 class="text-3xl text-gray-800 font-bold">Your Plane for today?</h2>
         <form id="todo-form" action="" class="px-5">
           <input
-            class="text-xl text-gray-800 font-semibold border-2 focus:border-0 focus:outline-none focus:ring-2 focus:ring-yellow-800 outline-0 rounded px-5 py-1 w-[250px]  sm:w-[280px] w-[250px] sm:w-[280px] md:w-[280px] lg:w-[280px] xl:w-[280px] 2xl:w-[280px] border-gray-700"
+            class="text-xl text-gray-800 font-semibold border-2 focus:border-0 focus:outline-none focus:ring-2 focus:ring-yellow-800 outline-0 rounded px-5 py-1 w-[280px]   w-[250px] sm:w-[280px] md:w-[280px] lg:w-[280px] xl:w-[280px] 2xl:w-[280px] border-gray-700"
             type="text"
             placeholder="Add Todo"
           />
