--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             Add Todo
           </button>
         </form>
-        <ul id="todoList">
+        <ul id="todoList" class="mt-10">
           <!-- <li>
             <span id="text" class="pl-5">Item 1</span>
             <div class="pr-2">
