--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     >
       <!-- navbar section  -->
       <nav class="flex items-center justify-between px-5 py-2 text-gray-800">
-        <h1 class="text-3xl font-semibold">Todo App</h1>
+        <h1 class="text-3xl font-semibold text-yellow-500">Todo app</h1>
         <ul class="flex items-center justify-center gap-10">
           <li
             class="text-2xl font-semibold cursor-pointer hover:text-yellow-500"
